--- a/css/index.html
+++ b/css/index.html
@@ -2964,7 +2964,7 @@
                                     <tr>
                                         <td>139</td>
                                         <td>font-feature-settings</td>
-                                        <td>font-feature-settings</td>
+                                        <td> 모바일타입 모바일의 다양한 모바일타입 피처를 설정한다.</td>
                                         <td>
                                             <span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -2992,7 +2992,7 @@
                                     <tr>
                                         <td>141</td>
                                         <td>font-language-override</td>
-                                        <td>font-language-override</td>
+                                        <td>서체에서 언어별 글리프의 사용을 제어한다.</td>
                                         <td>
                                             <span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -3006,7 +3006,7 @@
                                     <tr>
                                         <td>142</td>
                                         <td>font-optical-sizing</td>
-                                        <td>font-optical-sizing</td>
+                                        <td>텍스트 렌더링이 다양한 크기로 보기에 최적화되어 있는지 여부를 설정한다.</td>
                                         <td>
                                             <span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -3072,7 +3072,7 @@
                                     <tr>
                                         <td>147</td>
                                         <td>font-synthesis</td>
-                                        <td>font-synthesis</td>
+                                        <td>브라우저가 굵은 글꼴과 이탤릭 글꼴을 합성하는 것을 허용할지 설정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -3215,7 +3215,7 @@
                                     <tr>
                                         <td>158</td>
                                         <td>gap (grid-gap)</td>
-                                        <td>gap (grid-gap)</td>
+                                        <td>행과 열 사이의 간격(거터)을 설정</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -3435,8 +3435,8 @@
                                     </tr>
                                     <tr>
                                         <td>175</td>
-                                        <td>높이 설정</td>
                                         <td>height</td>
+                                        <td>높이 설정</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">star</span>
@@ -3462,7 +3462,7 @@
                                     <tr>
                                         <td>177</td>
                                         <td>hyphens</td>
-                                        <td>hyphens</td>
+                                        <td>여러 줄에 걸치는 텍스트에서 단어에 붙임표를 추가하는 방식을 설정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -3488,7 +3488,7 @@
                                     <tr>
                                         <td>179</td>
                                         <td>image-rendering</td>
-                                        <td>image-rendering</td>
+                                        <td>브라우저의 이미지 스케일링 방식에 대한 힌트를 제공한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -3657,7 +3657,7 @@
                                     <tr>
                                         <td>192</td>
                                         <td>isolation</td>
-                                        <td>isolation</td>
+                                        <td>새로운 쌓임 맥락을 생성해야 하는지 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -3721,7 +3721,7 @@
                                     <tr>
                                         <td>197</td>
                                         <td>letter-spacing</td>
-                                        <td>letter-spacing</td>
+                                        <td>글자 사이의 간격을 조절한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -3981,7 +3981,7 @@
                                     <tr>
                                         <td>217</td>
                                         <td>mask</td>
-                                        <td>mask</td>
+                                        <td>아이템이 부분적으로만 보여지게 하거나 혹은 완전히 가려서 보여지지 않게 할 수 있는 기능을 가지고 있다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -4215,7 +4215,7 @@
                                     <tr>
                                         <td>235</td>
                                         <td>max-height</td>
-                                        <td>max-height</td>
+                                        <td>요소의 최대 높이를 설정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -4241,7 +4241,7 @@
                                     <tr>
                                         <td>237</td>
                                         <td>max-width</td>
-                                        <td>width 최댓 값을 설정</td>
+                                        <td>너비 최댓 값을 설정</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">star</span>
@@ -4306,7 +4306,7 @@
                                     <tr>
                                         <td>242</td>
                                         <td>mix-blend-mode</td>
-                                        <td>mix-blend-mode</td>
+                                        <td>어느 요소의 콘텐츠가 자신의 배경 및 부모와 어떻게 혼합되어야 하는지 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -4319,7 +4319,7 @@
                                     <tr>
                                         <td>243</td>
                                         <td>object-fit</td>
-                                        <td>object-fit</td>
+                                        <td>img나 video 요소와 같은 대체 요소의 콘텐츠 크기를 어떤 방식으로 조절해 요소에 맞출 것인지 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -4332,7 +4332,7 @@
                                     <tr>
                                         <td>244</td>
                                         <td>object-position</td>
-                                        <td>object-position</td>
+                                        <td>대체 요소의 콘텐츠 정렬 방식을 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -4592,7 +4592,7 @@
                                     <tr>
                                         <td>264</td>
                                         <td>overflow-wrap</td>
-                                        <td>overflow-wrap</td>
+                                        <td>o어떤 문자가 내용 칸 밖으로 넘치지 않게 브라우저가 단어 마디 안에 줄을 바꿔야 할 것인지 아닌지를 정할 때 사용한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5515,7 +5515,7 @@
                                     <tr>
                                         <td>335</td>
                                         <td>tab-size</td>
-                                        <td>tab-size</td>
+                                        <td>탭 문자의 너비를 조절한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5774,8 +5774,8 @@
                                     </tr>
                                     <tr>
                                         <td>355</td>
-                                        <td>텍스트 값에 그림자 설정</td>
                                         <td>text-shadow</td>
+                                        <td>텍스트 값에 그림자 설정</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5826,8 +5826,8 @@
                                     </tr>
                                     <tr>
                                         <td>359</td>
-                                        <td>윗 값을 설정</td>
                                         <td>top</td>
+                                        <td>윗 값을 설정</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5905,7 +5905,7 @@
                                     <tr>
                                         <td>365</td>
                                         <td>transition</td>
-                                        <td>transition</td>
+                                        <td>엘리먼트의 두 가지 상태 사이에 변화를 줄 수 있다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5918,7 +5918,7 @@
                                     <tr>
                                         <td>366</td>
                                         <td>transition-delay</td>
-                                        <td>transition-delay</td>
+                                        <td> transition될 속성이 transition 요청을 받은 이후 실제로 transition하기까지 기다려야하는 시간의 양을 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -5996,7 +5996,7 @@
                                     <tr>
                                         <td>372</td>
                                         <td>user-select</td>
-                                        <td>user-select</td>
+                                        <td>사용자가 텍스트를 선택할 수 있는지 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -6009,7 +6009,7 @@
                                     <tr>
                                         <td>373</td>
                                         <td>vertical-align</td>
-                                        <td>vertical-align</td>
+                                        <td> inline 또는 table-cell box에서의 수직 정렬을 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -6022,7 +6022,7 @@
                                     <tr>
                                         <td>374</td>
                                         <td>visibility</td>
-                                        <td>visibility</td>
+                                        <td>문서의 레이아웃을 변경하지 않고 요소를 보이거나 숨깁니다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -6035,7 +6035,7 @@
                                     <tr>
                                         <td>375</td>
                                         <td>white-space</td>
-                                        <td>white-space</td>
+                                        <td>요소가 공백 문자를 처리하는 법을 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -6074,7 +6074,7 @@
                                     <tr>
                                         <td>378</td>
                                         <td>will-change</td>
-                                        <td>will-change</td>
+                                        <td>요소에 예상되는 변화의 종류에 관한 힌트를 브라우저에 제공한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -6087,7 +6087,7 @@
                                     <tr>
                                         <td>379</td>
                                         <td>word-break</td>
-                                        <td>word-break</td>
+                                        <td>텍스트가 자신의 콘텐츠 박스 밖으로 오버플로 할 때 줄을 바꿀 지 지정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
@@ -6100,7 +6100,7 @@
                                     <tr>
                                         <td>380</td>
                                         <td>word-spacing</td>
-                                        <td>word-spacing</td>
+                                        <td>단어와 단어 사이, 태그와 태그 사이의 거리를 설정한다.</td>
                                         <td><span class="material-symbols-outlined">star</span>
                                             <span class="material-symbols-outlined">grade</span>
                                             <span class="material-symbols-outlined">grade</span>
