--- a/javascript/effect/searchEffect01.html
+++ b/javascript/effect/searchEffect01.html
@@ -35,7 +35,7 @@
                 <label for="search">검색하기</label>
                 <input type="text" id="search" placeholder="CSS 속성을 입력해주세요.">
             </div>
-            <div class="search_info">
+            <div class="search__info">
                 <div>CSS 속성 갯수 : <span class="num">0</span></div>
             </div>
             <div class="search__list">
