--- a/study/t_study/Ex/study/1setting.html
+++ b/study/t_study/Ex/study/1setting.html
@@ -10,7 +10,7 @@
 
     <!-- title 아래 -->
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/dracula.css">
 
     <!-- main -->
     <main id="main">
