--- a/study/t_study/javascript/study/pp.html
+++ b/study/t_study/javascript/study/pp.html
@@ -18,7 +18,7 @@
                 <h3 class="t_tit2">padStart(), padEnd()</h3>
                 <p class="t_desc2">주어진 길이에 맞게 앞/뒤 문자열을 채우고, 새로운 문자열을 반환한다.</p>
                 <div class="t_code">
-<pre><code class="language-js">    onst str1 = "123"
+<pre><code class="language-js">    const str1 = "123"
     const currentStr1 = str1.padStart(1, "0");                 // 123
     const currentStr2 = str1.padStart(2, "0");                 // 123
     const currentStr3 = str1.padStart(3, "0");                 // 123
@@ -47,8 +47,6 @@
             </div>
             
         </div>
-        
-        <div id="main_desc"></div>
     </main>
     <!-- //main -->
 
