--- a/javascript/javascript05.html
+++ b/javascript/javascript05.html
@@ -73,11 +73,13 @@
                 <li><a href="#sample10">10. 문자열 메서드 : 검색 : indexOf() : 문자열에서 특정 문자의 위치를 찾는 것 : 반환(숫자) *</a></li>
                 <li><a href="#sample10">10. 문자열 메서드 : 검색 : lastIndexOf() : 문자열에서 특정 문자의 위치를 찾는 것 : 반환(숫자)</a></li>
 
-                <li><a href="#sample01">07. 문자열 메서드 : 검색 : search() : 문자열을 검색(정규식) 반환(숫자) *</a></li>
-                <li><a href="#sample01">08. 문자열 메서드 : 검색 : match() : 문자열을 검색(정규식) : 반한(배열)</a></li>
-                <li><a href="#sample01">09. 문자열 메서드 : 검색 : includes() : 문자열 포함 여부 검색 : 반환(불린) *</a></li>
-                <li><a href="#sample01">09. 문자열 메서드 : 검색 : charAt() : 지정한 인덱스의 문자를 추출 : 반환(문자열) *</a></li>
-                <li><a href="#sample01">09. 문자열 메서드 : 검색 : charCodeAt() : 지정한 인덱스의 문자를 추출 : 반환(숫자)</a></li>
+                <li><a href="#sample11">11. 문자열 메서드 : 검색 : includes() : 문자열 포함 여부 검색 : 반환(불린) *</a></li>
+
+                <li><a href="#sample12">12. 문자열 메서드 : 검색 : search() : 문자열을 검색(정규식) 반환(숫자) *</a></li>
+                <li><a href="#sample13">13. 문자열 메서드 : 검색 : match() : 문자열을 검색(정규식) : 반환(배열)</a></li>
+                
+                <li><a href="#sample14">14. 문자열 메서드 : 검색 : charAt() : 지정한 인덱스의 문자를 추출 : 반환(문자열) *</a></li>
+                <li><a href="#sample15">15. 문자열 메서드 : 검색 : charCodeAt() : 지정한 인덱스의 문자를 추출 : 반환(숫자)</a></li>
 
                 <li><a href="#sample01">10. 문자열 메서드 : 검색 : startsWith() : 문자열 포함 여부 검색 : 반환(불린)</a></li>
                 <li><a href="#sample01">11. 문자열 메서드 : 검색 : endsWith() : 문자열 포함 여부 검색 : 반환(불린)</a></li>
@@ -550,6 +552,63 @@
                     </div>
                 </div>
 
+                <!-- 12 -->
+                <div id="sample12" class="sample">
+                    <h3>12. search()</h3>
+                    <p>문자열(정규식)을 검색하고, 위치 값(숫자)을 반환한다.</p>
+                    <div class="box">
+                        "문자열".search("검색값");<br>
+                        "문자열".search(정규식 표현);
+                    </div>
+                    <div class="script">
+<pre><code class="language-js">    const str1 ="javascript reference"
+    const currentStr1 = str1.search("javascipt");           // 0
+    const currentStr2 = str1.search("reference");           // 11
+    const currentStr3 = str1.search("j");                   // 0
+    const currentStr4  = str1.search("a");                  // 1
+    const currentStr5 = str1.search("v");                   // 2
+    const currentStr6 = str1.search("jqeurey");             // -1
+    const currentStr7 = str1.search("b");                   // -1
+    const currentStr8 = str1.search(/[a-z]/g);              // 0
+</code></pre>
+                    </div>
+                </div>
+
+                <!-- 13 -->
+                <div id="sample13" class="sample">
+                    <h3>13. match()</h3>
+                    <p>문자열(정규식)을 검색하고, 위치 값(배열)을 반환한다.</p>
+                    <div class="script">
+<pre><code class="language-js">    const str1 ="javascript reference"
+    const currentStr1 = str1.match("javascipt");        // javascipt
+    const currentStr2 = str1.match("reference");        // reference
+    const currentStr3 = str1.match("r");                // r
+    const currentStr4 = str1.match(/reference/);        // reference
+    const currentStr5 = str1.match(/Reference/);        // null
+    const currentStr6 = str1.match(/Reference/i);       // Reference i는 소,대문자 구별x
+    const currentStr7 = str1.match(/r/g);               // ['r', 'r', 'r']
+    const currentStr8 = str1.match(/e/g);               // ['e', 'e', 'e', 'e']
+</code></pre>
+                    </div>
+                </div>
+
+                <!-- 14 -->
+                <div id="sample14" class="sample">
+                    <h3>14. charAt()</h3>
+                    <p>지정한 인덱스의 문자를 추출하여, 문자열을 반환한다.</p>
+                    <div class="box">
+                        "문자열".charAt(숫자);
+                    </div>
+                    <div class="script">
+<pre><code class="language-js">    const str1 ="javascript reference"
+    const currentStr1 = str1.charAt();        // j
+    const currentStr2 = str1.charAt("0");     // j
+    const currentStr3 = str1.charAt("1");     // a
+    const currentStr4 = str1.charAt("2");     // v
+</code></pre>
+                    </div>
+                </div>
+
             </div>
         <div id="main_desc"></div>
     </main>
@@ -809,7 +868,7 @@
             // "문자열".lastIndexOf(검색값, 위치값);
 
             const str1 ="javascript reference"
-            const currentStr1 = str1.indexOf("javascipt")           // 00
+            const currentStr1 = str1.indexOf("javascipt")           // 0
             const currentStr2 = str1.indexOf("reference")           // 11
             const currentStr3 = str1.indexOf("j")                   // 0
             const currentStr4  = str1.indexOf("a")                  // 1
@@ -850,6 +909,46 @@
             const currentStr5 = str1.includes("reference", 1)   // true
             const currentStr6 = str1.includes("reference", 11)   // true
             const currentStr7 = str1.includes("reference", 12)   // false
+        }
+
+        // 12. search : 변환(숫자)
+        {
+            // "문자열".search("검색값");
+            // "문자열".search(정규식 표현);
+            
+            const str1 ="javascript reference"
+            const currentStr1 = str1.search("javascipt");           // 0
+            const currentStr2 = str1.search("reference");           // 11
+            const currentStr3 = str1.search("j");                   // 0
+            const currentStr4  = str1.search("a");                  // 1
+            const currentStr5 = str1.search("v");                   // 2
+            const currentStr6 = str1.search("jqeurey");             // -1
+            const currentStr7 = str1.search("b");                   // -1
+            const currentStr8 = str1.search(/[a-z]/g);              // 0
+        }
+
+        // 13. match : 반환(배열)
+        {
+            const str1 ="javascript reference"
+            const currentStr1 = str1.match("javascipt");        // javascipt
+            const currentStr2 = str1.match("reference");        // reference
+            const currentStr3 = str1.match("r");                // r
+            const currentStr4 = str1.match(/reference/);        // reference
+            const currentStr5 = str1.match(/Reference/);        // null
+            const currentStr6 = str1.match(/Reference/i);       // Reference i는 소,대문자 구별x
+            const currentStr7 = str1.match(/r/g);               // ['r', 'r', 'r']
+            const currentStr8 = str1.match(/e/g);               // ['e', 'e', 'e', 'e']
+        }
+
+        // 14. charAt()
+        {
+            // "문자열".charAt(숫자);
+
+            const str1 ="javascript reference"
+            const currentStr1 = str1.charAt();        // j
+            const currentStr2 = str1.charAt("0");     // j
+            const currentStr3 = str1.charAt("1");     // a
+            const currentStr4 = str1.charAt("2");     // v
         }
     </script>
 
