--- a/study/t_study/css/study/graphic.html
+++ b/study/t_study/css/study/graphic.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>확장자</title>
+    <title>그래픽 확장자</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dracula.css">
 </head>
 <body>
-    <header id="header">
-
-    </header>
-    <!-- //header -->
-
     <main id="main">
         <div class="document">
             <h2 class="t_tit">그래픽 확장자</h2>
@@ -72,13 +67,13 @@
             <p class="t_box">SVG : w3c가 개발한 개방형 표준으로서 2차원 <i>벡터 그래픽</i>의 표현을 위한 XML 마크업 언어이다.</p>
         </div>
     </main>
-
     <!-- //main -->
+
     <footer id="footer">
         <a href="mailto:ipkg7210@gmail.com">ipkg7210@gmail.com</a>
     </footer>
-
     <!-- //footer -->
+    
     <script src="../css/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 
