--- a/study/t_study/css/study/irImageBack.html
+++ b/study/t_study/css/study/irImageBack.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blockInline</title>
+    <title>IR / 이미지 스프라이트 / 백그라운드</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dracula.css">
 </head>
 
 <body>
-
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">이미지 스프라이트 / IR / 백그라운드</h2>
+            <h2 class="t_tit">IR / 이미지 스프라이트 / 백그라운드</h2>
             <p class="t_desc">
-                이번 시간은 이미지 스프라이트 / IR / 백그라운드에 대해 알아 보겠습니다.
+                이번 시간은 IR / 이미지 스프라이트 / 백그라운드에 대해 알아 보겠습니다.
             </p>
 
             <hr>
