--- a/test.html
+++ b/test.html
@@ -1,76 +1,55 @@
-&lt;section id="imageType03" class="image__wrap score section">
-    &lt;h2>wynd&lt;/h2>
-    &lt;p>
-        사전적 의미로 골목길이라는 뜻을 가지고 있습니다.
-    &lt;/p>
-    &lt;div class="image__inner container-fluid">
-        &lt;article class="image">
-            &lt;!-- &lt;figure class="image__box">
-                &lt;img src="img/image03_01.jpg" alt="About us">
-            &lt;/figure> -->
-            &lt;div class="image__desc">
-                &lt;h3>About us&lt;/h3>
-                &lt;p>슬로우한 캐주얼 웨어&lt;/p>
+&lt;main id="main">
+    &lt;div class="search__wrap">
+        &lt;span>charAt()를 이용하여 검색하기&lt;/span>
+        &lt;h1>CSS 속성 검색하기&lt;/h1>
+        
+        &lt;div class="search__box">
+            &lt;label for="search">검색하기&lt;/label>
+            &lt;input type="text" id="search" placeholder="CSS 속성 및 유형을 입력해주세요.">
+        &lt;/div>
+        &lt;div class="search__info">
+            &lt;div class="keyword">
+                &lt;span>a&lt;/span>
+                &lt;span>b&lt;/span>
+                &lt;span>c&lt;/span>
+                &lt;span>d&lt;/span>
+                &lt;span>e&lt;/span>
+                &lt;span>f&lt;/span>
+                &lt;span>g&lt;/span>
+                &lt;span>h&lt;/span>
+                &lt;span>i&lt;/span>
+                &lt;span>j&lt;/span>
+                &lt;span>k&lt;/span>
+                &lt;span>l&lt;/span>
+                &lt;span>m&lt;/span>
+                &lt;span>n&lt;/span>
+                &lt;span>o&lt;/span>
+                &lt;span>p&lt;/span>
+                &lt;span>q&lt;/span>
+                &lt;span>r&lt;/span>
+                &lt;span>s&lt;/span>
+                &lt;span>t&lt;/span>
+                &lt;span>u&lt;/span>
+                &lt;span>v&lt;/span>
+                &lt;span>w&lt;/span>
+                &lt;span>x&lt;/span>
+                &lt;span>y&lt;/span>
+                &lt;span>z&lt;/span>
             &lt;/div>
-            &lt;div class="image__sns">
-                &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
-                &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
-                &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
-                &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
-                &lt;a href="#" class="link">&lt;span class="ir">icon&lt;/span>&lt;/a>
+            &lt;div>전체 속성 갯수 : &lt;span class="num">0&lt;/span>&lt;/div>
+        &lt;/div>
+        &lt;div class="search__list">
+            &lt;div class="css">
+                &lt;ul>
+                    &lt;li>&lt;strong>accent-color&lt;/strong> : href특성을 통해 다른 페이지나 같은페이지의 위치, 파일와 그 외 다른 URL로 연결할 수 있는 하이퍼 링크를 만듭니다.&lt;/li>
+                    &lt;li>&lt;strong>align-content&lt;/strong> :  콘텐츠 아이템의 상하관계 정렬 상태를 설정&lt;/li>
+                    &lt;li>&lt;strong>align-items&lt;/strong> : 콘텐츠 아이템의 내부 상하관계 정렬 상태를 설정&lt;/li>
+                    .
+                    .
+                    .
+                    &lt;li>&lt;strong>z-index&lt;/strong> : 위치 지정 요소와, 그 자손 또는 하위 플렉스 아이템의 Z축 순서를 지정&lt;/li>
+                &lt;/ul>
             &lt;/div>
-        &lt;/article>
-        &lt;article class="image">
-            &lt;figure class="image__box">
-                &lt;img src="img/image03_02.jpg" alt="Bearded Kid">
-            &lt;/figure>
-            &lt;div class="image__desc">
-                &lt;h3>Bearded Kid&lt;/h3>
-                &lt;p>다양성의 존중이라는 슬로건&lt;/p>
-            &lt;/div>
-            &lt;div class="image__sns">
-                &lt;a href="#" class="link">&lt;span class="ir">페이스북&lt;/span>&lt;/a>
-                &lt;a href="#" class="link">&lt;span class="ir">페이지이동&lt;/span>&lt;/a>
-            &lt;/div>
-        &lt;/article>
-        &lt;article class="image">
-            &lt;figure class="image__box">
-                &lt;img src="img/image03_03.jpg" alt="Fall Break">
-            &lt;/figure>
-            &lt;div class="image__desc">
-                &lt;h3>Fall Break&lt;/h3>
-                &lt;p>가벼운 휴식 뒤 리프레시되는 느낌의 의류&lt;/p>
-            &lt;/div>
-            &lt;div class="image__sns">
-                &lt;a href="#" class="link">&lt;span class="ir">페이스북&lt;/span>&lt;/a>
-                &lt;a href="#" class="link">&lt;span class="ir">페이지이동&lt;/span>&lt;/a>
-            &lt;/div>
-        &lt;/article>
-        &lt;article class="image">
-            &lt;figure class="image__box">
-                &lt;img src="img/image03_04.jpg" alt="Pottery">
-            &lt;/figure>
-            &lt;div class="image__desc">
-                &lt;h3>Pottery&lt;/h3>
-                &lt;p>현대사회에 알맞는 유니폼을 제안&lt;/p>
-            &lt;/div>
-            &lt;div class="image__sns">
-                &lt;a href="#" class="link">&lt;span class="ir">페이스북&lt;/span>&lt;/a>
-                &lt;a href="#" class="link">&lt;span class="ir">페이지이동&lt;/span>&lt;/a>
-            &lt;/div>
-        &lt;/article>
-        &lt;article class="image">
-            &lt;figure class="image__box">
-                &lt;img src="img/image03_05.jpg" alt="Shirter">
-            &lt;/figure>
-            &lt;div class="image__desc">
-                &lt;h3>Shirter&lt;/h3>
-                &lt;p>가치를 잃지 않는 변화&lt;/p>
-            &lt;/div>
-            &lt;div class="image__sns">
-                &lt;a href="#" class="link">&lt;span class="ir">페이스북&lt;/span>&lt;/a>
-                &lt;a href="#" class="link">&lt;span class="ir">페이지이동&lt;/span>&lt;/a>
-            &lt;/div>
-        &lt;/article>
+        &lt;/div>
     &lt;/div>
-&lt;/section>
+&lt;/main>
