--- a/javascript/effect/searchEffect03.html
+++ b/javascript/effect/searchEffect03.html
@@ -469,7 +469,8 @@
         const searchKeyword = document.querySelectorAll(".search__info .keyword span");    // 알파벳
         const searchList = document.querySelectorAll(".search__list ul li")             // 목록 리스트
         const searchInfo = document.querySelector(".search__info .num")                 // 전체 갯수 구하기
-    
+        let count = 0;
+
         // 전체 갯수 구하기
         searchInfo.textContent = searchList.length;
 
@@ -477,7 +478,7 @@
             el.addEventListener("click", () => {
                 const searchWord = el.innerText;    // 사용자가 클릭한 알파벳
 
-                console.log(searchWord)
+                console.log(searchWord);
 
                 searchList.forEach(el => {
                     const cssName = el.querySelector("strong").innerText;   // CSS 속성 텍스트
@@ -486,12 +487,15 @@
                     // 알파벳 첫 글자 == CSS 속성 첫 글자
                     if(searchWord.charAt(0) === cssName.charAt(0)) {
                         el.classList.remove("hide");
+                        count++
                     } else {
                         el.classList.add("hide");
                     }
-                })
-            })
-        })
+                    searchInfo.textContent = count;
+                });
+                count = 0;
+            });
+        });
     </script>
 </body>
 </html>
