--- a/study/t_study/Ex/study/searchEffect03.html
+++ b/study/t_study/Ex/study/searchEffect03.html
@@ -14,14 +14,13 @@
         <div class="document">
             <h2 class="t_tit">서치 이펙트 03</h2>
             <p class="t_desc2">
-                검색 기능을 가진 이펙트를 코딩해봤습니다.
+                알파벳을 클릭하면 해당 알파벳이 앞자리에 포함된 속성이 나오도록 해보겠습니다.
             </p>
 
             <h3 class="t_tit2">HTML</h3>
             <p class="t_desc2">
                 사이트를 코딩하는 데에 필요한 HTML의 구조를 잡아줍니다.<br>
-                data-name을 사용하여 각 li에 이름을 부여 해줍니다.<br>
-                해당 HTML에서 결과물에 맞게 li입력 시 보는데 불편해지기에 갯수를 제한했습니다.
+                해당 html은 div안에 keyword클래스를 부여해 준 뒤, span을 사용하여 검색 기능의 구조를 잡아주도록 코딩했습니다.
             </p>
             <div class="t_code">
 <pre><code class="language-js">    &lt;main id="main">
@@ -275,31 +274,38 @@
             <h3 class="t_tit2">script</h3>
             <p class="t_desc2">
                 querySelector를 이용하여 배열을 불러와준 뒤에, forEach문을 사용해줍니다.
-                해당 script는 includes()를 사용하여 0(false)이 되는 값만 hide를 지워줍니다.
+                해당 script는 charAt()를 사용하여 해당 알파벳을 누르면 검색되도록 설정했습니다.
             </p>
             <div class="t_code">
 <pre><code class="language-js">    // 선택자
-    const searchBox = document.querySelector(".search__box input");         // input 박스
-    const searchList = document.querySelectorAll(".search__list ul li")     // 목록 리스트
-    const searchInfo = document.querySelector(".search__info .num")         // 전체 갯수 구하기
-    
+    const searchKeyword = document.querySelectorAll(".search__info .keyword span");    // 알파벳
+    const searchList = document.querySelectorAll(".search__list ul li")             // 목록 리스트
+    const searchInfo = document.querySelector(".search__info .num")                 // 전체 갯수 구하기
+    let count = 0;
+
     // 전체 갯수 구하기
     searchInfo.textContent = searchList.length;
 
-    // 검색
-    searchBox.addEventListener("keyup", () => {
-        const searchWord = searchBox.value;         // 사용자가 입력한 키워드
-        
-        searchList.forEach(el => {
-            const cssName = el.dataset.name;
-            const cssType = el.dataset.type;
+    searchKeyword.forEach(el => {
+        el.addEventListener("click", () => {
+            const searchWord = el.innerText;    // 사용자가 클릭한 알파벳
 
-            if(cssName.includes(searchWord) | cssType.includes(searchWord)){
-                el.classList.remove("hide");
-            } else {
-                el.classList.add("hide");
-            }
+            console.log(searchWord);
 
+            searchList.forEach(el => {
+                const cssName = el.querySelector("strong").innerText;   // CSS 속성 텍스트
+                // console.log(cssName)
+
+                // 알파벳 첫 글자 == CSS 속성 첫 글자
+                if(searchWord.charAt(0) === cssName.charAt(0)) {
+                    el.classList.remove("hide");
+                    count++
+                } else {
+                    el.classList.add("hide");
+                }
+                searchInfo.textContent = count;
+            });
+            count = 0;
         });
     });
 </code></pre>
