--- a/javascript/effect/searchEffect02.html
+++ b/javascript/effect/searchEffect02.html
@@ -438,24 +438,23 @@
     <!-- //footer -->
 
     <script>
-        // 선택자
-        const searchBox = document.querySelector(".search__box input");         // input 박스
-        const searchList = document.querySelectorAll(".search__list ul li")     // 목록 리스트
+        //선택자
+        const searchBox = document.querySelector(".search__box input"); //검색 영역
+        const searchList = document.querySelectorAll(".search__list ul li"); //목록 리스트      
         const searchInfo = document.querySelector(".search__info .num")         // 전체 갯수 구하기
-        
-        // 전체 갯수 구하기
-        searchInfo.textContent = searchList.length;
 
-        // 검색
-        searchBox.addEventListener("keyup", () => {
-            const searchWord = searchBox.value;         // 사용자가 입력한 키워드
-            
+
+        //전체 갯수 설정하기
+        searchInfo.textContent = searchList.length;       
+
+        searchBox.addEventListener("keyup", ()=>{
+            const searchWord = searchBox.value; //사용자가 입력한 키워드        
+
             searchList.forEach(el => {
-                const cssType = el.dataset.type;                        // CSS 유형 모든 값
-                const cssName = el.querySelector("strong").innerText    // CSS 속성 모든 값
-                console.log(cssName)
+                const cssName = el.dataset.name;
+                const cssType = el.dataset.type;     
 
-                if(cssName.includes(searchWord) || cssType.includes(searchWord)){
+                if(cssName.includes(searchWord) | cssType.includes(searchWord)){
                     el.classList.remove("hide");
                 } else {
                     el.classList.add("hide");
