--- a/study/t_study/Ex/study/searchEffect02.html
+++ b/study/t_study/Ex/study/searchEffect02.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>서치 이펙트 01</title>
+    <title>서치 이펙트 02</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/dracula.css">
 </head>
@@ -243,28 +243,27 @@
                 해당 script는 includes()를 사용하여 0(false)이 되는 값만 hide를 지워줍니다.
             </p>
             <div class="t_code">
-<pre><code class="language-js">    // 선택자
-    const searchBox = document.querySelector(".search__box input");         // input 박스
-    const searchList = document.querySelectorAll(".search__list ul li")           // 목록 리스트
-    const searchInfo = document.querySelector(".search__info .num")          // 전체 갯수 구하기
-    
-    // 전체 갯수 구하기
-    searchInfo.textContent = searchList.length;
+<pre><code class="language-js">    //선택자
+    const searchBox = document.querySelector(".search__box input");        //검색 영역
+    const searchList = document.querySelectorAll(".search__list ul li");         //목록 리스트      
+    const searchInfo = document.querySelector(".search__info .num")         // 전체 갯수 구하기
 
-    // 검색
-    searchBox.addEventListener("keyup", () => {
-        const searchWord = searchBox.value;         // 사용자가 입력한 키워드
-        
+
+    //전체 갯수 설정하기
+    searchInfo.textContent = searchList.length;       
+
+    searchBox.addEventListener("keyup", ()=>{
+        const searchWord = searchBox.value; //사용자가 입력한 키워드        
+
         searchList.forEach(el => {
             const cssName = el.dataset.name;
-            const cssType = el.dataset.type;
+            const cssType = el.dataset.type;     
 
             if(cssName.includes(searchWord) | cssType.includes(searchWord)){
                 el.classList.remove("hide");
             } else {
                 el.classList.add("hide");
             }
-
         });
     });
 </code></pre>
