--- a/javascript/effect/slideEffect01.html
+++ b/javascript/effect/slideEffect01.html
@@ -7,8 +7,247 @@
     <title>슬라이드 이펙트 01</title>
 
     <link rel="stylesheet" href="../assets/css/slider.css">
+    <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
-<body>
+<body class="img01 jeju">
+
+    <!-- header -->
+    <header id="header">
+        <h1>Javascript Slider Effect01</h1>
+        <p>슬라이드 이펙트 - 트랜지션 효과</p>
+        <ul>
+            <li class="active"><a href="slideEffect01.html">1</a></li>
+            <li><a href="slideEffect02.html">2</a></li>
+            <li><a href="slideEffect03.html">3</a></li>
+            <li><a href="slideEffect04.html">4</a></li>
+            <li><a href="slideEffect05.html">5</a></li>
+            <li><a href="slideEffect06.html">6</a></li>
+            <li><a href="slideEffect07.html">7</a></li>
+        </ul>
+    </header>
+
+    <!-- main -->
+    <main id="main">
+
+    </main>
+
+    <!-- footer -->
+    <footer id="footer">
+        <div class="modal__wrap">
+            <div class="modal__btn">
+                <label for="btn">소스 보기</label>
+                <input class="btn" type="checkbox" id="btn" name="btn" />
+            </div>
+            <div class="modal__cont">
+                <div class="modal__box">
+                        <div class="title">
+                            <span class="dot" aria-label="true"></span>
+                            <div class="tabs">
+                                <div class="active">
+                                    <span class="favicon">
+                                        <svg width="16" height="16" viewBox="0 0 18 18" fill="navy" aria-hidden="true" focusable="false">
+                                            <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                            <path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"></path>
+                                            <path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill=yellow></path>
+                                        </svg>
+                                    </span>
+                                    <em>Javascript</em>
+                                    <span class="close">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                                            <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                            <path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        </svg>
+                                    </span>
+                                </div>
+                                <div>
+                                    <span class="favicon">
+                                        <svg width="16" height="16" viewBox="0 0 18 18" fill="navy" aria-hidden="true" focusable="false">
+                                            <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                            <path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"></path>
+                                            <path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill=yellow></path>
+                                        </svg>
+                                    </span>
+                                    <em>HTML</em>
+                                    <span class="close">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                                            <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                            <path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        </svg>
+                                    </span>
+                                </div>
+                                <div>
+                                    <span class="favicon">
+                                        <svg width="16" height="16" viewBox="0 0 18 18" fill="navy" aria-hidden="true" focusable="false">
+                                            <circle cx="9" cy="9" r="9" fill="var(--red-0)"></circle>
+                                            <path d="M18 9C18 13.9706 15.4688 3.09375 9 10.125C2.53125 17.1562 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill="orange"></path>
+                                            <path d="M18 9C18 13.9706 14.9062 0.84375 8.29688 6.1875C1.6875 11.5312 0 13.9706 0 9C0 4.02944 4.02944 0 9 0C13.9706 0 18 4.02944 18 9Z" fill=yellow></path>
+                                        </svg>
+                                    </span>
+                                    <em>CSS</em>
+                                    <span class="close">
+                                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                                            <path d="M12.5 3.5L3.5 12.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                            <path d="M12.5 12.5L3.5 3.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                        </svg>
+                                    </span>
+                                </div>
+                            </div>
+                            <span class="plus" arra-label="true">
+                                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" aria-hidden="true" focusable="false">
+                                    <path d="M2.5 8H13.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                    <path d="M8 2.5V13.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                                </svg>
+                            </span>
+                        </div>
+                        <div class="cont">
+                            <div class="active">
+<pre><code class="language-js">    // Javascript
+    let x = 100,
+        y = 200,
+        z = "javascript";
+
+    document.write(x);
+    document.write(y);
+    document.write(z);
+</code></pre>
+                            </div>
+                            <div>
+<pre><code class="language-js">    // HTML
+    &lt;main id="main">
+        &lt;div class="search__wrap">
+            &lt;span>charAt()를 이용하여 검색하기&lt;/span>
+            &lt;h1>CSS 속성 검색하기&lt;/h1>
+
+            &lt;div class="search__box">
+                &lt;label for="search">검색하기&lt;/label>
+                &lt;input type="text" id="search" placeholder="CSS 속성 및 유형을 입력해주세요.">
+            &lt;/div>
+            &lt;div class="search__info">
+                &lt;div class="keyword">
+                    &lt;span>a&lt;/span>
+                    &lt;span>b&lt;/span>
+                    &lt;span>c&lt;/span>
+                    &lt;span>d&lt;/span>
+                    &lt;span>e&lt;/span>
+                    &lt;span>f&lt;/span>
+                    &lt;span>g&lt;/span>
+                    &lt;span>h&lt;/span>
+                    &lt;span>i&lt;/span>
+                    &lt;span>j&lt;/span>
+                    &lt;span>k&lt;/span>
+                    &lt;span>l&lt;/span>
+                    &lt;span>m&lt;/span>
+                    &lt;span>n&lt;/span>
+                    &lt;span>o&lt;/span>
+                    &lt;span>p&lt;/span>
+                    &lt;span>q&lt;/span>
+                    &lt;span>r&lt;/span>
+                    &lt;span>s&lt;/span>
+                    &lt;span>t&lt;/span>
+                    &lt;span>u&lt;/span>
+                    &lt;span>v&lt;/span>
+                    &lt;span>w&lt;/span>
+                    &lt;span>x&lt;/span>
+                    &lt;span>y&lt;/span>
+                    &lt;span>z&lt;/span>
+                &lt;/div>
+                &lt;div>전체 속성 갯수 : &lt;span class="num">0&lt;/span>&lt;/div>
+            &lt;/div>
+            &lt;div class="search__list">
+                &lt;div class="css">
+                    &lt;ul>
+                        &lt;li>&lt;strong>accent-color&lt;/strong> : href특성을 통해 다른 페이지나 같은페이지의 위치, 파일와 그 외 다른 URL로 연결할 수 있는 하이퍼 링크를 만듭니다.&lt;/li>
+                        &lt;li>&lt;strong>align-content&lt;/strong> :  콘텐츠 아이템의 상하관계 정렬 상태를 설정&lt;/li>
+                        &lt;li>&lt;strong>align-items&lt;/strong> : 콘텐츠 아이템의 내부 상하관계 정렬 상태를 설정&lt;/li>
+                        .
+                        .
+                        .
+                        &lt;li>&lt;strong>z-index&lt;/strong> : 위치 지정 요소와, 그 자손 또는 하위 플렉스 아이템의 Z축 순서를 지정&lt;/li>
+                    &lt;/ul>
+                &lt;/div>
+            &lt;/div>
+        &lt;/div>
+    &lt;/main>
+</code></pre>
+                            </div>
+                            <div>
+<pre><code class="language-js">    // CSS
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        background-color: #fff3e0;
+    }
+    #wrap {
+        width: 1200px;
+        margin: 0 auto;
+    }
+    #header {
+        width: 1200px;
+        height: 100px;
+        background-color: #ffe0b2;
+    }
+    #nav {
+        width: 1200px;
+        height: 100px;
+        background-color: #ffcc80;
+    }
+    #aside {
+        width: 400px;
+        height: 780px;
+        background-color: #ffb74d;
+        float: left;
+    }
+    #section {
+        width: 800px;
+        height: 780px;
+        background-color: #ffa726;
+        float: left;
+    }
+    #footer {
+        width: 1200px;
+        height: 100px;
+        background-color: #ff9800;
+        clear: both;
+    }
+</code></pre>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="../assets/css/js/highlight.min.js"></script>
+    <script>
+        hljs.highlightAll();
+    </script>
     
+    <script>
+        // 탭 메뉴
+        const tabBtn = document.querySelectorAll(".modal__box .tabs > div");
+        const tabCont = document.querySelectorAll(".modal__box .cont > div");
+
+        tabBtn.forEach((element, index) => {
+            
+            element.addEventListener("click", (event) => {
+                event.preventDefault();
+
+                tabBtn.forEach(el => {
+                    el.classList.remove("active");
+                })
+
+                element.classList.add("active");
+
+                tabCont.forEach(div => {
+                    div.style.display = "none";
+                });
+
+                tabCont[index].style.display = "block";
+            });
+        });
+    </script>
+
 </body>
 </html>
